kategori işlemlerine geçildi

--- a/Demo_Product/Views/Product/Index.cshtml
+++ b/Demo_Product/Views/Product/Index.cshtml
@@ -22,8 +22,8 @@
             <th>@item.Name</th>
             <th>@item.Price</th>
             <th>@item.Stock</th>
-            <th><a href="" class="btn btn-outline-danger">Sil</a></th>
-            <th><a href="" class="btn btn-outline-success">Güncelle</a></th>
+            <th><a href="/Product/DeleteProduct/@item.Id" class="btn btn-outline-danger">Sil</a></th>
+            <th><a href="/Product/UpdateProduct/@item.Id" class="btn btn-outline-success">Güncelle</a></th>
         </tr>
     }
 </table>
