--- a/Demo_Product/Views/Partials/Partial_Sidebar.cshtml
+++ b/Demo_Product/Views/Partials/Partial_Sidebar.cshtml
@@ -8,13 +8,21 @@
                     Ürünler
                 </a>
                 <a class="nav-link" href="/Customer/Index/">
-                    <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
                     Müşteriler
 
                 </a>
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="/Category/Index/">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                     Kategoriler
+                </a>
+                <a class="nav-link" href="/Job/Index/">
+                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                    Meslekler
+                </a>
+                <a class="nav-link" href="/Job/AddJob/">
+                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                    Yeni Meslek Girişi
                 </a>
                 <a class="nav-link" href="/Product/AddProduct/">
                     <div class="sb-nav-link-icon"><i class="fas fa-apple-alt"></i></div>
