--- a/Demo_Product/Views/Customer/Index.cshtml
+++ b/Demo_Product/Views/Customer/Index.cshtml
@@ -9,6 +9,7 @@
         <th>#</th>
         <th>Müşteri Adı</th>
         <th>Şehir</th>     
+        <th>Meslek</th>
         <th>Sil</th>
         <th>Güncelle</th>
     </tr>
@@ -19,6 +20,7 @@
             <th>@item.Id</th>
             <th>@item.Name</th>
             <th>@item.City</th>
+            <th>@item.Job.Name</th>
             <th><a href="/Customer/DeleteCustomer/@item.Id" class="btn btn-outline-danger">Sil</a></th>
             <th><a href="/Customer/UpdateCustomer/@item.Id" class="btn btn-outline-success">Güncelle</a></th>
         </tr>
