--- a/Demo_Product/Views/Customer/UpdateCustomer.cshtml
+++ b/Demo_Product/Views/Customer/UpdateCustomer.cshtml
@@ -14,6 +14,9 @@
     @Html.Label("Müşteri Şehri")
     @Html.TextBoxFor(x=>x.City,new{@class="form-control"})
     <br />
+    <br />
+    @Html.Label("Meslek Seçimi")
+    @Html.DropDownListFor(x=>x.JobID,(List<SelectListItem>)ViewBag.v,new{@class ="form-control"})
     <button class="btn btn-info">Müşteri Güncelle</button>
 
 </form>
