--- a/Demo_Product/Views/Partials/Partial_Sidebar.cshtml
+++ b/Demo_Product/Views/Partials/Partial_Sidebar.cshtml
@@ -28,6 +28,10 @@
                     <div class="sb-nav-link-icon"><i class="fas fa-apple-alt"></i></div>
                     Yeni Ürün Girişi
                 </a>
+                <a class="nav-link" href="/Settings/Index/">
+                    <div class="sb-nav-link-icon"><i class="fas fa-lock"></i></div>
+                    Şifre İşlemleri
+                </a>
                 <a class="nav-link" href="tables.html">
                     <div class="sb-nav-link-icon"><i class="fas fa-help-alt"></i></div>
                     Yardım
